microsphere-source session007: 深度 review 全量穷尽性核对（用户要求对照历史分析）——重大发现 02/03 穷尽性声称被证伪（02: 342/160 未提及 46.8%、03: 323/168 52%——归组未列文件名规模化再犯）+ 02 真遗漏 7 族已补提取（KP-120a event 系统 10 文件/KP-120b IO 序列化+文件监听/KP-120c URLClassPathHandle 版本分派族）——outline/02 补 3 维度（事件/IO/classloading——ParallelEventDispatcher ForkJoinPool 实证为 03 parallel 主题源头）+ 01 补常量类 + 03 归组缺口注记 + 铁律 #7 basename 级核对